# anchor

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  bump-version.sh  setup-tests.sh
.github/scripts/: publish-npmjs.sh
.github/workflows/: build-cli.yaml  prepare-release.yaml  publish-crates.yaml  publish-npmjs.yaml  release-pr.yaml  release.yaml  reusable-tests.yaml
avm/: Cargo.toml
avm/src/: lib.rs
bench/: BINARY_SIZE.md  COMPUTE_UNITS.md  STACK_MEMORY.md
cli/: Cargo.toml
cli/npm-package/: package.json
cli/src/: checks.rs  config.rs  lib.rs  program.rs  rust_template.rs
client/: Cargo.toml
client/example/: Cargo.toml
client/src/: blocking.rs  lib.rs  nonblocking.rs
docker/: Makefile
idl/: Cargo.toml
idl/spec/: Cargo.toml
idl/src/: lib.rs
lang/: Cargo.toml
lang/attribute/access-control/: Cargo.toml
lang/attribute/access-control/src/: lib.rs
lang/attribute/account/: Cargo.toml
lang/attribute/account/src/: id.rs  lazy.rs  lib.rs
lang/attribute/constant/: Cargo.toml
lang/attribute/constant/src/: lib.rs
lang/attribute/error/: Cargo.toml
lang/attribute/error/src/: lib.rs
lang/attribute/event/: Cargo.toml
lang/attribute/event/src/: lib.rs
lang/attribute/program/: Cargo.toml
lang/attribute/program/src/: lib.rs
lang/attribute/program/src/declare_program/: common.rs  mod.rs
lang/attribute/program/src/declare_program/mods/: accounts.rs  client.rs  constants.rs  cpi.rs  errors.rs  events.rs  internal.rs  parsers.rs  program.rs  types.rs
lang/derive/accounts/: Cargo.toml
lang/derive/accounts/src/: lib.rs
lang/derive/serde/: Cargo.toml
lang/derive/serde/src/: lazy.rs  lib.rs
lang/derive/space/: Cargo.toml
lang/derive/space/src/: lib.rs
lang/src/: bpf_upgradeable_state.rs  context.rs  error.rs  idl.rs  lib.rs  system_program.rs
lang/src/accounts/: account.rs  account_loader.rs  interface.rs  interface_account.rs  lazy_account.rs  migration.rs  program.rs
lang/syn/: Cargo.toml
lang/syn/src/: lib.rs
lang/syn/src/codegen/: error.rs
lang/syn/src/codegen/accounts/: __client_accounts.rs  __cpi_client_accounts.rs  bumps.rs  constraints.rs  duplicate_mutable_account_keys.rs  exit.rs  to_account_infos.rs  to_account_metas.rs  try_accounts.rs
lang/syn/src/codegen/program/: cpi.rs  dispatch.rs  entry.rs  handlers.rs  idl.rs  instruction.rs
lang/syn/src/idl/: accounts.rs  common.rs  defined.rs  error.rs  external.rs
lang/syn/src/parser/: context.rs
lang/syn/src/parser/accounts/: constraints.rs
lang/tests/: account_reload.rs  generics_test.rs  macros.rs  seeds_compile.rs  serialization.rs  space.rs
spl/: Cargo.toml
spl/src/: associated_token.rs  governance.rs  idl_build.rs  memo.rs  metadata.rs  mint.rs  stake.rs  token.rs  token_2022.rs  token_interface.rs
spl/src/token_2022_extensions/: cpi_guard.rs  default_account_state.rs  group_member_pointer.rs  group_pointer.rs  immutable_owner.rs  interest_bearing_mint.rs  memo_transfer.rs  metadata_pointer.rs  mint_close_authority.rs  non_transferable.rs  permanent_delegate.rs  token_group.rs  token_metadata.rs  transfer_fee.rs  transfer_hook.rs
tests/anchor-cli-account/: package.json
tests/anchor-cli-idl/: package.json
tests/anchor-cli-idl/programs/idl-commands-one/: Cargo.toml
tests/anchor-cli-idl/programs/idl-commands-one/src/: lib.rs
tests/auction-house/: package.json
tests/bench/: VERSION  bench.json  package.json
tests/bench/programs/bench/: Cargo.toml
tests/bench/programs/bench/src/: lib.rs
tests/bpf-upgradeable-state/: package.json
tests/bpf-upgradeable-state/programs/bpf-upgradeable-state/: Cargo.toml
tests/bpf-upgradeable-state/programs/bpf-upgradeable-state/src/: lib.rs
tests/cashiers-check/: package.json
tests/cfo/: package.json
tests/cfo/programs/cfo/: Cargo.toml
tests/cfo/programs/cfo/src/: lib.rs
tests/chat/: package.json
tests/composite/: package.json
tests/composite/programs/composite/: Cargo.toml
tests/composite/programs/composite/src/: lib.rs
tests/cpi-returns/: package.json
tests/custom-coder/: package.json
tests/custom-coder/programs/native-system/: Cargo.toml
tests/custom-coder/programs/native-system/src/: lib.rs
tests/custom-coder/programs/spl-associated-token/: Cargo.toml
tests/custom-coder/programs/spl-associated-token/src/: lib.rs
tests/custom-discriminator/: package.json
tests/custom-discriminator/programs/ambiguous-discriminator/: Cargo.toml
tests/custom-discriminator/programs/ambiguous-discriminator/src/: lib.rs
tests/custom-discriminator/programs/custom-discriminator/: Cargo.toml
tests/custom-discriminator/programs/custom-discriminator/src/: lib.rs
tests/custom-program/: package.json
tests/declare-id/: package.json
tests/declare-program/: package.json
tests/duplicate-mutable-accounts/: package.json
tests/duplicate-mutable-accounts/programs/duplicate-mutable-accounts/: Cargo.toml
tests/duplicate-mutable-accounts/programs/duplicate-mutable-accounts/src/: lib.rs
tests/errors/: package.json
tests/errors/programs/errors/: Cargo.toml
tests/errors/programs/errors/src/: lib.rs
tests/escrow/: package.json
tests/events/: package.json
tests/events/programs/events/: Cargo.toml
tests/events/programs/events/src/: lib.rs
tests/floats/: package.json
tests/idl/: package.json  test.sh
tests/idl/programs/generics/: Cargo.toml
tests/idl/programs/generics/src/: lib.rs
tests/idl/programs/idl/: Cargo.toml
tests/idl/programs/idl/src/: lib.rs
tests/ido-pool/: package.json
tests/ido-pool/programs/ido-pool/: Cargo.toml
tests/ido-pool/programs/ido-pool/src/: lib.rs
tests/interface-account/: package.json
tests/interface-account/programs/old/: Cargo.toml
tests/interface-account/programs/old/src/: lib.rs
tests/lazy-account/: package.json
tests/lazy-account/programs/lazy-account/: Cargo.toml
tests/lazy-account/programs/lazy-account/src/: lib.rs
tests/lockup/programs/lockup/: Cargo.toml
tests/lockup/programs/lockup/src/: lib.rs
tests/misc/programs/init-if-needed/: Cargo.toml
tests/misc/programs/init-if-needed/src/: lib.rs
ts/: package.json
(+288 files in other folders)
