[package]
name = "trixter-osec-anchor-spl"
version = "1.0.0-rc.3"
authors = ["Anchor Maintainers <accounts@200ms.io>"]
edition = "2021"
license = "Apache-2.0"
description = "CPI clients for SPL programs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "anchor_spl"

[features]
default = ["associated_token", "mint", "token", "token_2022", "token_2022_extensions"]
anchor-debug = ["trixter-osec-anchor-lang/anchor-debug"]
associated_token = ["spl-associated-token-account-interface"]
devnet = []
governance = []
idl-build = ["trixter-osec-anchor-lang/idl-build"]
memo = ["spl-memo-interface"]
metadata = ["mpl-token-metadata", "dep:solana-sysvar", "dep:base64ct"]
mint = []
stake = ["dep:borsh", "dep:solana-stake-interface"]
token = ["spl-token-interface"]
token_2022 = ["spl-token-2022-interface"]
token_2022_extensions = [
    "spl-token-2022-interface",
    "spl-token-group-interface",
    "spl-token-metadata-interface",
    "spl-pod",
]

[dependencies]
trixter-osec-anchor-lang = { path = "../lang", version = "1.0.0-rc.3", features = ["derive"] }
# FIXME(edition2024): Not used directly, but upstream crates resolve to this version,
# which uses Edition 2024
base64ct = { version = "<1.8.0", optional = true }
borsh = { version = "1.5.7", optional = true }
mpl-token-metadata = { version = "=5.1.2-alpha.1", optional = true }
solana-stake-interface = { workspace = true, features = ["borsh"], optional = true }
solana-sysvar = { version = "3", optional = true }
spl-associated-token-account-interface = { version = "2", optional = true }
spl-memo-interface = { version = "2", optional = true }
spl-pod = { version = "0.7", optional = true }
spl-token-interface = { version = "2", optional = true }
spl-token-2022-interface = { version = "2", optional = true }
spl-token-group-interface = { version = "0.7", optional = true }
spl-token-metadata-interface = { version = "0.8", optional = true }
