[package]
name = "trixter-osec-anchor-attribute-access-control"
version = "0.41.5"
authors = ["Anchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/coral-xyz/anchor"
license = "Apache-2.0"
description = "Anchor attribute macro for instruction access control"
edition = "2021"

[lib]
proc-macro = true
name = "anchor_attribute_access_control"

[features]
anchor-debug = ["trixter-osec-anchor-syn/anchor-debug"]

[dependencies]
trixter-osec-anchor-syn = { path = "../../syn", version = "0.41.5" }
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
