[package]
name = "trixter-osec-anchor-attribute-account"
version = "0.40.4"
authors = ["Anchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/coral-xyz/anchor"
license = "Apache-2.0"
description = "Anchor attribute macro for defining an account"
edition = "2021"

[lib]
proc-macro = true

[features]
anchor-debug = ["trixter-osec-anchor-syn/anchor-debug"]
idl-build = ["trixter-osec-anchor-syn/idl-build"]
lazy-account = []
event-cpi = []

[dependencies]
trixter-osec-anchor-syn = { path = "../../syn", version = "0.40.4", features = ["hash"] }
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
