[package]
name = "trixter-osec-anchor-attribute-error"
version = "0.41.0"
authors = ["Anchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/coral-xyz/anchor"
license = "Apache-2.0"
description = "Anchor attribute macro for creating error types"
edition = "2021"

[lib]
proc-macro = true
name = "anchor_attribute_error"

[features]
anchor-debug = ["trixter-osec-anchor-syn/anchor-debug"]
idl-build = ["trixter-osec-anchor-syn/idl-build"]

[dependencies]
trixter-osec-anchor-syn = { path = "../../syn", version = "0.41.0" }
quote = "1"
syn = { version = "1", features = ["full"] }
