[package]
name = "trixter-osec-anchor-attribute-event"
version = "0.40.4"
authors = ["Anchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/coral-xyz/anchor"
license = "Apache-2.0"
description = "Anchor attribute macro for defining an event"
rust-version = "1.60"
edition = "2021"

[lib]
proc-macro = true

[features]
anchor-debug = ["trixter-osec-anchor-syn/anchor-debug"]
event-cpi = ["trixter-osec-anchor-syn/event-cpi"]
idl-build = ["trixter-osec-anchor-syn/idl-build"]

[dependencies]
trixter-osec-anchor-syn = { path = "../../syn", version = "0.40.4", features = ["hash"] }
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
