[package]
name = "trixter-osec-anchor-attribute-program"
version = "1.1.2"
authors = ["Anchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/coral-xyz/anchor"
license = "Apache-2.0"
description = "Anchor attribute macro for defining a program"
edition = "2021"

[lib]
proc-macro = true
name = "anchor_attribute_program"

[features]
anchor-debug = ["trixter-osec-anchor-syn/anchor-debug"]
idl-build = ["trixter-osec-anchor-syn/idl-build"]

[dependencies]
trixter-osec-anchor-lang-idl = { path = "../../../idl", version = "0.1.2", features = ["convert"] }
trixter-osec-anchor-syn = { path = "../../syn", version = "1.1.2" }
anyhow = "1"
heck = "0.3"
proc-macro2 = "1"
quote = "1"
serde_json = "1"
syn = { version = "1", features = ["full"] }
