[package]
name = "trixter-osec-anchor-derive-accounts"
version = "0.32.1"
authors = ["Anchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/coral-xyz/anchor"
license = "Apache-2.0"
description = "Anchor Derive macro for accounts"
edition = "2021"

[lib]
proc-macro = true
name = "anchor_derive_accounts"

[features]
allow-missing-optionals = ["trixter-osec-anchor-syn/allow-missing-optionals"]
anchor-debug = ["trixter-osec-anchor-syn/anchor-debug"]
idl-build = ["trixter-osec-anchor-syn/idl-build"]
init-if-needed = ["trixter-osec-anchor-syn/init-if-needed"]

[dependencies]
trixter-osec-anchor-syn = { path = "../../syn", version = "0.32.1" }
quote = "1"
syn = { version = "1", features = ["full"] }
