[package]
name = "trixter-osec-anchor-derive-serde"
version = "0.41.0"
authors = ["Anchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/coral-xyz/anchor"
license = "Apache-2.0"
description = "Anchor Derive macro for serialization and deserialization"
edition = "2021"

[lib]
proc-macro = true
name = "anchor_derive_serde"

[features]
idl-build = ["trixter-osec-anchor-syn/idl-build"]
lazy-account = []

[dependencies]
trixter-osec-anchor-syn = { path = "../../syn", version = "0.41.0" }
proc-macro-crate = "3.4.0"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
