[package]
name = "idl-commands-one"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "idl_commands_one"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["trixter-osec-anchor-lang/idl-build"]

[dependencies]
trixter-osec-anchor-lang = { path = "../../../../lang" }
