[package]
name = "bench"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
idl-build = ["trixter-osec-anchor-lang/idl-build", "trixter-osec-anchor-spl/idl-build"]

[dependencies]
trixter-osec-anchor-lang = { path = "../../../../lang" }
trixter-osec-anchor-spl = { path = "../../../../spl" }
