[package]
name = "trixter-osec-bpf-upgradeable-state"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trixter-osec-bpf_upgradeable_state"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["trixter-osec-anchor-lang/idl-build"]

[dependencies]
trixter-osec-anchor-lang = { path = "../../../../lang" }
