[package]
name = "trixter-osec-cfo"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trixter-osec-cfo"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = ["test"]
test = []

[dependencies]
trixter-osec-anchor-lang = { path = "../../../../lang" }
trixter-osec-anchor-spl = { path = "../../../../spl" }
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
trixter-osec-swap = { path = "../../deps/swap/programs/swap", features = ["cpi"] }
trixter-osec-serum_dex = { path = "../../deps/openbook-dex/dex", features = ["no-entrypoint"] }
trixter-osec-registry = { path = "../../deps/stake/programs/registry", features = ["cpi"] }
trixter-osec-lockup = { path = "../../deps/stake/programs/lockup", features = ["cpi"] }
