[package]
name = "ambiguous-discriminator"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ambiguous_discriminator"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["trixter-osec-anchor-lang/idl-build"]

[dependencies]
trixter-osec-anchor-lang = { path = "../../../../lang" }
