[package]
name = "trixter-osec-duplicate-mutable-accounts"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "trixter-osec-duplicate_mutable_accounts"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { path = "../../../../lang", features = ["init-if-needed"] }