[package]
name = "duplicate-mutable-accounts"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "duplicate_mutable_accounts"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
idl-build = ["trixter-osec-anchor-lang/idl-build"]

[dependencies]
trixter-osec-anchor-lang = { path = "../../../../lang", features = ["init-if-needed"] }