[package]
name = "trixter-osec-generics"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trixter-osec-generics"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["trixter-osec-anchor-lang/idl-build", "external/idl-build"]
default = []

[dependencies]
trixter-osec-anchor-lang = { path = "../../../../lang" }
trixter-osec-external = { path = "../external", features = ["no-entrypoint"] }
