[package]
name = "trixter-osec-idl"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "external/idl-build"]

[dependencies]
anchor-lang = { path = "../../../../lang" }
anchor-spl = { path = "../../../../spl" }
bytemuck = { version = "*", features = ["derive", "min_const_generics"] }
external = { path = "../external", features = ["no-entrypoint"] }
