[package]
name = "trixter-osec-idl"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
idl-build = ["trixter-osec-anchor-lang/idl-build", "trixter-osec-anchor-spl/idl-build", "external/idl-build"]

[dependencies]
trixter-osec-anchor-lang = { path = "../../../../lang" }
trixter-osec-anchor-spl = { path = "../../../../spl" }
bytemuck = { version = "*", features = ["derive", "min_const_generics"] }
trixter-osec-external = { path = "../external", features = ["no-entrypoint"] }
