[package]
name = "trixter-osec-ido-pool"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trixter-osec-ido_pool"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["trixter-osec-anchor-lang/idl-build", "trixter-osec-anchor-spl/idl-build"]

[dependencies]
trixter-osec-anchor-lang = { path = "../../../../lang" }
trixter-osec-anchor-spl = { path = "../../../../spl" }
