[package]
name = "lockup"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lockup"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
trixter-osec-anchor-lang = { path = "../../../../lang" }
trixter-osec-anchor-spl = { path = "../../../../spl" }
