[package]
name = "trixter-osec-init-if-needed"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "trixter-osec-init_if_needed"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["trixter-osec-anchor-lang/idl-build"]

[dependencies]
trixter-osec-anchor-lang = { path = "../../../../lang", features = ["init-if-needed"] }
